src-tauri/src/engine/snapshots/annot_lib__engine__tests__content_to_empty.snap
---
source: src/engine.rs
expression: "render(old, new, &compute_hunks(old, new, 3))"
---
@@ old 1..3 new 1..1 @@
del   1     |hello
del   2     |world
