src-tauri/src/engine/snapshots/annot_lib__engine__tests__crlf.snap
---
source: src/engine.rs
expression: "render(old, new, &compute_hunks(old, new, 3))"
---
@@ old 1..4 new 1..4 @@
ctx   1   1 |a
del   2     |»b«
add       2 |»B«
ctx   3   3 |c
