src-tauri/src/engine/snapshots/annot_lib__engine__tests__empty_to_content.snap
---
source: src/engine.rs
expression: "render(old, new, &compute_hunks(old, new, 3))"
---
@@ old 1..1 new 1..3 @@
add       1 |hello
add       2 |world
